# VirtualDesktopAccessor

./: .gitignore  Cargo.toml  LICENSE.txt  README-crate.md  README.markdown  README.md  VirtualDesktopAccessor.sln  example.ah2  example.ahk  info.txt  note-CoInitializeEx.md  note-IVirtualDesktopNotification.md  note-com-rs-update.md  note-explorer-exe-is-dead.md  note-window-rs.md
.github/workflows/: build.yml
TestVirtualDesktopAccessorWin32/: TestVirtualDesktopAccessorWin32.cpp  TestVirtualDesktopAccessorWin32.vcxproj  TestVirtualDesktopAccessorWin32.vcxproj.filters  stdafx.cpp
VirtualDesktopAccessor/: VirtualDesktopAccessor.vcxproj  VirtualDesktopAccessor.vcxproj.filters  Win10Desktops.h  dllmain.cpp  dllmain.def  dllmain.h  stdafx.cpp  stdafx.h
VirtualDesktopAccessor.NET/: Native.cs  VirtualDesktopAccessor.NET.csproj
dll/: CHANGELOG.md  Cargo.toml  build.rs  cbindgen.toml
dll/src/: lib.rs  main.rs
src/: changelistener.rs  comhelpers.rs  comobjects.rs  desktop.rs  desktopid.rs  error.rs  events.rs  helpers.rs  hresult.rs  hstring.rs  immersive.rs  interfaces.rs  lib.rs  listener.rs  log.rs  service.rs  tests.rs  workerthread.rs
src/comapi/: desktop.rs  experiments.rs  interfaces.rs  listener.rs  listener_test.rs  mod.rs  numbered.rs  raw.rs  raw2.rs  windowing.rs
testbin/: .gitignore  Cargo.toml
testbin/src/: main.rs
