[package]
name = "winvd"
version = "0.0.20"
authors = ["Jari Otto Oskari Pennanen"]
license = "MIT"
edition = "2018"
description = "Provides functions for accessing Windows 10 virtual desktop API"
readme = "README.md"
homepage = "https://github.com/ciantic/VirtualDesktopAccessor/tree/rust/"
repository = "https://github.com/ciantic/VirtualDesktopAccessor/tree/rust/"

[dependencies]
windows = { version = "*", features = [
    "implement",
    "Win32_System_Com",
    "Win32_UI_Shell_Common", # for IObjectArray
] }

windows-interface = { version = "*" }
windows-implement = { version = "*" }
once_cell = "1.5.0"
crossbeam-channel = { version = "0.5", optional = true }
# crossbeam-channel = { version = "0.5" } 

[dev-dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[lib]
name = "winvd"
path = "src/lib.rs"

[features]
debug = []

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[workspace]
members = ["testbin", "dll"]
