[package]
name = "winvd"
version = "0.0.20"
authors = ["Jari Otto Oskari Pennanen"]
license = "MIT"
edition = "2018"
description = "Provides functions for accessing Windows 10 virtual desktop API"
readme = "README.md"
homepage = "https://github.com/ciantic/VirtualDesktopAccessor/tree/rust/"
repository = "https://github.com/ciantic/VirtualDesktopAccessor/tree/rust/"

[dependencies]
windows = { version = "*", features = [
    # Find WinApi features with searching here https://microsoft.github.io/windows-docs-rs/
    "implement",
    "Win32_System_Com",
    "Win32_UI_Shell_Common",        # for IObjectArray
    "Win32_UI_WindowsAndMessaging", # for TranslateMessage etc.
    "Win32_Foundation",             # for FindWindowW
    "Win32_System_Threading",       # For CreateThread
    "Win32_Security",               # For CreateThread
] }
memoize = { version = "0.4.0" }
windows-interface = { version = "*" }
windows-implement = { version = "*" }
once_cell = "1.5.0"
crossbeam-channel = { version = "0.5", optional = true }
# crossbeam-channel = { version = "0.5" } 


[lib]
name = "winvd"
path = "src/lib.rs"

[features]
debug = []

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[workspace]
members = ["testbin", "dll"]
