[package]
name = "winvd"
version = "0.0.31"
authors = ["Jari Otto Oskari Pennanen"]
license = "MIT"
edition = "2021"
description = "Provides functions for accessing Windows 11 virtual desktop API"
readme = "README-crate.md"
homepage = "https://github.com/ciantic/VirtualDesktopAccessor/tree/rust/"
repository = "https://github.com/ciantic/VirtualDesktopAccessor/tree/rust/"

[dependencies]
windows = { version = "0.44", features = [
    # Find WinApi features with searching here https://microsoft.github.io/windows-docs-rs/
    "implement",
    "Win32_System_Com",
    "Win32_UI_Shell_Common",        # for IObjectArray
    "Win32_UI_WindowsAndMessaging", # for TranslateMessage etc.
    "Win32_Foundation",             # for FindWindowW
    "Win32_System_Threading",       # For CreateThread
] }
windows-interface = { version = "0.44" }
windows-implement = { version = "0.44" }
crossbeam-channel = { version = "0.5", optional = true }
winit = { version = "0.28", optional = true }
macro_rules_attribute = "0.1"

[dev-dependencies]
once_cell = "1.5.0"

[lib]
name = "winvd"
path = "src/lib.rs"

[features]
integration-tests = []

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
all-features = true

[workspace]
members = ["testbin", "dll", "examples/with-iced"]
