[package]
name = "dll"
version = "0.1.0"
authors = ["Jari Pennanen <ciantic@oksidi.com>"]
edition = "2018"
publish = false

[lib]
name = "VirtualDesktopAccessor"
crate-type = ["cdylib"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "wtypesbase", "hstring", "guiddef", "debugapi"] }
winvd = { path = "../", features = ["debug"] }
once_cell = "1.5.0"

[build-dependencies]
cbindgen = "0.24.3"

