[package]
name = "testbin"
version = "0.0.1"
authors = ["Jari Otto Oskari Pennanen"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "wtypesbase", "hstring", "guiddef"] }
winvd = { path = "../", features = ["debug", "crossbeam-channel"] }
once_cell = "1.5.0" 
crossbeam-channel = { version = "0.5" }