[package]
name = "testbin"
version = "0.0.1"
authors = ["Jari Otto Oskari Pennanen"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29"
winvd = { path = "../", features = ["winit"] }
once_cell = "1.5.0"
